# TiralabraSyksy22

./: .coverage  .coveragerc  .gitignore  README.md  pyproject.toml
project/: KNN.py  LoadCSVData.py  dataloader.py  index.py  main.py  minheap.py  plotter.py  testData.py
project/test/: KNN_test.py  LoadCSVData_test.py
