[tool.poetry]
name = "tiralabrasyksy22"
version = "0.1.0"
description = ""
authors = ["Rastenbe <stenbra7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.5"


[tool.poetry.group.dev.dependencies]
pandas = "^1.5.1"
matplotlib = "^3.6.2"
keras = "^2.10.0"
pytest = "^7.2.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
